syntax = "proto3";

package pb;



option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";


message VerifyEmailRequest {
  string username = 1;
  int64 email_id = 2;
  string secret_code = 3;
}


message VerifyEmailResponse {
  bool is_verified = 1;
}